--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0"
+    />
     <title>Netflix</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript
+      >"Don't ask what the world needs, ask what makes you come alive. Because
+      what the world needs most, is more people who come alive." - Howard
+      Thurman</noscript
+    >
     <div id="root"></div>
   </body>
 </html>
